Keenan - Fixed address on contact us page not having a margin on mobile

--- a/InverGrove.Web/Content/less/app.less
+++ b/InverGrove.Web/Content/less/app.less
@@ -754,6 +754,9 @@ form .ng-dirty.ng-valid {
 .warning {
   color: @warning;
 }
+.widget {
+    margin-bottom: 35px;
+}
 .worship-info {
   margin-bottom: 30px;
   min-height: 100px;
